Bypass the cache when reloading LoFi images.

This is a partial revert of
https://chromium-review.googlesource.com/c/chromium/src/+/1166600, as a
temporary workaround to the bug listed below, which is caused by a bug
in the network stack that affects partial range cache revalidations.

This CL only bypasses the cache when reloading placeholders for LoFi,
and not when reloading placeholders for lazily loaded images, because
bypassing the cache when lazily loading images can potentially waste a
lot of network data, plus lazy image loading isn't launched yet, so
keeping the behavior as-is will make it easier to debug and fix the
underlying problem.

Bug: 892461
Change-Id: I96ed023431fc4e7e346497820da1de14940aca64
Reviewed-on: https://chromium-review.googlesource.com/c/1263565
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Scott Little <sclittle@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597219}
Former-commit-id: ecfb06487f00a123cabfdbf48cb10e8efc61400d