third_party/blink/renderer/platform/loader/fetch/resource.cc
@@ -976,6 +976,10 @@ String Resource::GetMemoryDumpName() const {
       identifier_);
 }
 
+void Resource::SetCachePolicyBypassingCache() {
+  resource_request_.SetCacheMode(mojom::FetchCacheMode::kBypassCache);
+}
+
 void Resource::SetPreviewsState(WebURLRequest::PreviewsState previews_state) {
   resource_request_.SetPreviewsState(previews_state);
 }
