third_party/blink/renderer/platform/loader/fetch/resource.h
@@ -477,6 +477,7 @@ class PLATFORM_EXPORT Resource : public GarbageCollectedFinalized<Resource>,
     return clients_;
   }
 
+  void SetCachePolicyBypassingCache();
   void SetPreviewsState(WebURLRequest::PreviewsState);
   void ClearRangeRequestHeader();
 
